<resources>
    <string name="app_name">RoomDemoPart1</string>
    <string name="title_activity_farmer_list">Farmers</string>
    <string name="title_activity_create_farmer">Create Farmer</string>
    <string name="name">Name</string>
    <string name="father_name">Father Name</string>
    <string name="age">Age</string>
    <string name="place">Place</string>
    <string name="insert">Insert</string>
    <string name="back">Back</string>
</resources>
